edit skills area and fix spacing

--- a/src/css/about2.css
+++ b/src/css/about2.css
@@ -81,7 +81,6 @@ h2#header-h2 {
 
 a.wavy {
 position: relative;
--webkit-box-reflect: below -12px linear-gradient(transparent, rgba(0,0,0,0.2));
 margin:0;
 }
 a.wavy span {
